# civicjournal-time

./: .gitignore  ARCHITECTURE.md  Cargo.toml  CivicJournalSpec.txt  DEMOMODE.md  DEPLOYMENT.md  Journal.toml  LICENSE  QUERY.md  README.md  ROLLUP.md  SNAPSHOT.md  SPEC.md  TESTING.md  TESTS.md  TURNSTILE.md  build.rs  cbindgen.toml  plan.md
.cargo/: config.toml
benches/: critical_paths.rs
civicjournal_demo/: summary.txt
civicjournal_demo/deltas/: delta_0000.json  delta_0001.json  delta_0002.json  delta_0003.json  delta_0008.json  delta_0009.json  delta_0012.json  delta_0018.json  delta_0020.json  delta_0021.json  delta_0022.json  delta_0023.json  delta_0024.json  delta_0025.json  delta_0027.json  delta_0028.json  delta_0029.json  delta_0033.json  delta_0034.json  delta_0037.json  delta_0041.json  delta_0042.json  delta_0043.json  delta_0046.json  delta_0053.json  delta_0054.json  delta_0056.json  delta_0060.json  delta_0062.json  delta_0063.json  delta_0065.json  delta_0066.json  delta_0069.json  delta_0071.json  delta_0072.json
civicjournal_demo/snapshots/: snapshot_hour_0036.json  snapshot_hour_0042.json  snapshot_hour_0048.json  snapshot_hour_0054.json  snapshot_hour_0060.json
include/: civicjournal_time.h
minimal/: Cargo.toml
minimal/src/: main.rs
src/: error.rs  ffi.rs  fork_detection.rs  health_monitor.rs  integration_tests.rs  journal_api.rs  lib.rs  lib.rs.new  merkle_tree.rs  rate_limiter.rs  recovery.rs  schema.rs  test_utils.rs  time_hierarchy.rs
src/api/: async_api.rs  mod.rs  sync_api.rs
src/config/: config.toml  error.rs  mod.rs  types.rs  validation.rs
src/config/tests/: config_mod_tests.rs  validation_tests.rs
src/core/: hash.rs  leaf.rs  merkle.rs  mod.rs  page.rs  snapshot.rs  snapshot_manager.rs  time_manager.rs
src/demo/: auto_db.rs  config.rs  explorer.rs  generator.rs  mod.rs  postgres.rs  rollup.rs  simulator.rs  snapshot.rs
src/demo_cli/: auto_db.rs  mod.rs
src/ffi/: c_ffi.rs  mod.rs  wasm_ffi.rs
src/query/: engine.rs  mod.rs  types.rs
src/storage/: file.rs  memory.rs  mod.rs
src/time/: hierarchy.rs  level.rs  mod.rs  unit.rs
src/turnstile/: mod.rs
src/types/: compression.rs  error.rs  log_level.rs  mod.rs  storage.rs  time.rs
tests/: api_async_tests.rs  api_endpoint_tests.rs  api_sync_tests.rs  backup_restore_tests.rs  basic_types_tests.rs  demo_mode_tests.rs  file_storage_tests.rs  file_storage_unit_tests.rs  hash_tests.rs  init_logger_tests.rs  memory_storage_tests.rs  memory_storage_unit_tests.rs  page_behavior_tests.rs  query_engine_tests.rs  snapshot_manager_integration_tests.rs  time_manager_additional_tests.rs  time_manager_age_based_tests.rs  time_manager_multi_leaf_tests.rs  time_manager_tests.rs  time_manager_tests.rs.bak  turnstile_ffi_tests.rs  turnstile_tests.rs
tests/integration/: full_workflow.rs  rollup_file_integration.rs
time_hierarchy_demo/: summary.txt
time_hierarchy_demo/deltas/: delta_0004.json  delta_0005.json  delta_0006.json  delta_0007.json  delta_0010.json  delta_0011.json  delta_0013.json  delta_0014.json  delta_0015.json  delta_0016.json  delta_0017.json  delta_0019.json  delta_0026.json  delta_0030.json  delta_0031.json  delta_0032.json  delta_0035.json  delta_0036.json  delta_0038.json  delta_0039.json  delta_0040.json  delta_0044.json  delta_0045.json  delta_0047.json  delta_0048.json  delta_0049.json  delta_0050.json  delta_0051.json  delta_0052.json  delta_0055.json  delta_0057.json  delta_0058.json  delta_0059.json  delta_0061.json  delta_0064.json  delta_0067.json  delta_0068.json  delta_0070.json
time_hierarchy_demo/snapshots/: snapshot_hour_0000.json  snapshot_hour_0006.json  snapshot_hour_0012.json  snapshot_hour_0018.json  snapshot_hour_0024.json  snapshot_hour_0030.json  snapshot_hour_0066.json  snapshot_hour_0072.json
