[package]
name = "civicjournal-time"
version = "0.1.0"
edition = "2021"
description = "A hierarchical time-series journal system using merkle-chains and pages for efficient historical state management"
license = "AGPL-3.0-only"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4" # For converting hashes to hex strings

[dev-dependencies]
# Add development dependencies here, e.g., for testing

[features]
default = []
async_api = ["tokio", "futures"]
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
