[package]
name = "civicchain-minimal"
version = "0.1.0"
edition = "2021"
description = "Minimal version of CivicChain Time for Windows testing"

[workspace]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
